# k-trace-CCA

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  requirements.txt  run_experiments.sh
python/: combine_npz.py  evaluate_runs.py  full_attack.py  plotResults.py  restore_full_attack.py  restore_test.py  test.py
python/helpers/: experiment.py  intt_builder.py  misc.py  params.py
python/plot/: plt_config.json
python/pybpgraph/: pybpgraph.py
python/simulation/: .gitignore  gen_input.py  generate_sparse.py  leak_data.py  recover_sk_sparse.py  test_generate_sparse.py
python/simulation/kyber/reference/: indcpa.py  ntt.py  params.py  poly.py  polyvec.py  reduce.py  test_ntt.py
src/: butterfly_node.rs  constants.rs  graph.rs  kyber_msg.rs  kyber_ref_ntt.rs  lib.rs  ntt.rs  python_nodes.rs  reduce.rs
