[package]
name = "ntt_bp"
version = "0.1.0"
authors = ["Julius Hermelink <julius.hermelink@unibw.de>", "Silvan Streit <silvan.streit@aisec.fraunhofer.de>", "Emanuele Strieder <emanuele.strieder@aisec.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ntt_bp"
crate-type = ["cdylib"]

[dependencies]
crossbeam = "0.8.0"

[dependencies.pyo3]
version = "0.20"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies.belief_propagation]
git = "https://github.com/juliusjh/belief_propagation.git"
branch = "main"
features = ["debug_info_on_error"] #, "progress_output"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
